<resources>
    <string name="app_name">HotelManagementApp</string>
    <string name="title_activity_reservation" translatable="false">reservationActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="title_activity_order" translatable="false">OrderActivity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="main_loginBtn">Login</string>
    <string name="main_reservBtn">Make Reservation</string>
    <string name="main_askBtn">Ask a question</string>
    <string name="main_quit">Quit</string>
    <string name="wait">Wait a second…</string>
    <string name="botInfo">Hi! This is an interactive offline bot. You can ask him a question about everything in the application. Just write a message below and send it by clicking on the letter button.</string>
    <string name="loginButton">Log In</string>
    <string name="reservationButton">New reservation</string>
    <string name="button2">Quit app</string>
    <string name="sendButton">Book a room</string>
    <string name="signInButton">Log In</string>
    <string name="forgotPassButton">Forgot password</string>
    <string name="addReservation">New reservation</string>
    <string name="attraction">Attraction</string>
    <string name="couponButton">Discount</string>
    <string name="restaurant">Restaurant</string>
    <string name="aboutUs">About us</string>
    <string name="signOut">Sign out</string>
    <string name="saunaDelete">Delete</string>
    <string name="saunaButton">Add</string>
    <string name="spaDelete">Delete</string>
    <string name="spaButton">Add</string>
    <string name="poolDelete">Delete</string>
    <string name="poolButton">Add</string>
    <string name="toyDelete">Delete</string>
    <string name="toyButton">Add</string>
    <string name="cinemaDelete">Delete</string>
    <string name="cinemaButton">Add</string>
    <string name="paymentButton">Pay</string>
    <string name="menuButton">Pay</string>
    <string name="submitButton">Submit</string>
    <string name="button">Rate us</string>
    <string name="button3">How to get?</string>
    <string name="button4">Contact with section</string>
    <string name="checkQuestion">Check questions</string>
    <string name="goToMenuRestaurant">Go to Restaurant</string>
    <string name="sendButton2">Order</string>
    <string name="paymentButton2">Pay and order</string>
    <string name="addButton">Add</string>
    <string name="checkButton">Check order</string>
    <string name="noInternetButton">Try again</string>
    <string name="noInternet">No Internet!</string>
    <string name="checkCon">Check connection</string>
    <string name="createBtn">Create account</string>
    <string name="enterTel">Enter your phone number</string>
    <string name="enterPass">Enter your password</string>
    <string name="modeChange">Light/Dark mode:</string>
    <string name="discTxt">Your discount (%):</string>
    <string name="sumTxt">Sum:</string>
    <string name="orderTxt">Order</string>
    <string name="orderHint">Your order</string>
    <string name="phoneText">Mobile number:</string>
    <string name="passText">Password:</string>
    <string name="passHint">Enter your password</string>
    <string name="setAccBtn">You dont have an account yet?</string>
    <string name="adress">Adress:</string>
    <string name="map">Map:</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="pickAdults">Number of adults</string>
    <string name="pickKids">Number of kids</string>
    <string name="pickRooms">Number of rooms</string>
    <string name="typeRoom">Room type</string>
    <string name="dateArrival">Pick the date of arrival</string>
    <string name="dateDepar">The date of departure</string>
    <string name="timeArrival">Arrival time</string>
    <string name="rateUs">Rate us!</string>
    <string name="serviceText">Service at the reception + cleanliness of the rooms</string>
    <string name="serviceRestaurant">Service in the restaurant</string>
    <string name="appLike">How do you like the app?</string>
</resources>
