<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderDetails">

    <WebView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/noInternet"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/cutView"
        android:layout_width="126dp"
        android:layout_height="35dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:hint="Price with discount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="314dp"
        android:layout_height="38dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="49dp"
        android:text="@string/orderTxt"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderView"
        android:layout_width="355dp"
        android:layout_height="325dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/order"
        android:fontFamily="@font/annie_use_your_telescope"
        android:hint="@string/orderHint"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="107dp"
        android:layout_height="44dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="78dp"
        android:text="@string/sumTxt"
        android:textAlignment="center"
        android:textColor="#0B0101"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderView" />

    <TextView
        android:id="@+id/priceView"
        android:layout_width="126dp"
        android:layout_height="35dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="140dp"
        android:hint="Price without discount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderView" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/gradient"
        android:onClick="sendOrder"
        android:text="@string/sendButton2"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceView" />

    <Button
        android:id="@+id/paymentButton"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/gradient"
        android:onClick="payForFood"
        android:text="@string/paymentButton2"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sendButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="25dp"
        android:text="@string/discTxt"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderView" />

    <TextView
        android:id="@+id/discountSummarize"
        android:layout_width="78dp"
        android:layout_height="23dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="61dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderView" />

</androidx.constraintlayout.widget.ConstraintLayout>